<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="@color/colorFrag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/server_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="@dimen/normal_text_size"
        android:layout_margin="@dimen/normal_padding"
        android:text="@string/label_dash_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/serverip_title"
        android:text="@string/label_dash_ipaddr"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/serverip_value"
        android:text="@string/label_dash_ipaddr_mask"
        android:inputType="textUri"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverip_title"
        android:layout_width="@dimen/ipaddr_field_width"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/serverport_title"
        android:text="@string/label_dash_port"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toEndOf="@id/serverip_value"
        app:layout_constraintTop_toBottomOf="@id/server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/serverport_value"
        android:text="000000"
        android:inputType="number"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toEndOf="@id/serverip_value"
        app:layout_constraintTop_toBottomOf="@id/serverport_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/serverlogin_title"
        android:text="@string/label_dash_login"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/serverlogin_value"
        android:text="000000"
        android:inputType="text"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverlogin_title"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/serverpass_title"
        android:text="@string/label_dash_pass"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toEndOf="@id/serverlogin_value"
        app:layout_constraintTop_toBottomOf="@id/serverip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/serverpass_value"
        android:text="000000"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toEndOf="@id/serverlogin_value"
        app:layout_constraintTop_toBottomOf="@id/serverpass_title"
        android:layout_width="@dimen/login_field_width"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>