<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dash_server_fragment"
    style="@style/style_dash_fragment">

    <TextView
        android:id="@+id/server_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_margin="@dimen/normal_padding"
        android:text="@string/label_dash_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/serverip_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/server_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/serverip_value"
            android:hint="@string/label_dash_ipaddr"
            android:inputType="textUri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/serverport_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/serverport_value"
            android:hint="@string/label_dash_port"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/serverlogin_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverport_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/serverlogin_value"
            android:hint="@string/label_dash_login"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/serverlogin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/serverpass_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverlogin_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/serverpass_value"
            android:hint="@string/label_dash_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>