<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_dash_fragment"
    android:id="@+id/dash_apn_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dash_server_fragment">

    <TextView
        android:id="@+id/apn_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_margin="@dimen/normal_padding"
        android:text="@string/label_dash_apn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <android.support.design.widget.TextInputLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apn_title"
        android:id="@+id/apnip_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apnip_value"
            android:hint="@string/label_dash_apn_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/apnlogin_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apnip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/apnlogin_value"
            android:hint="@string/label_dash_login"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/apnpass_title"
        android:layout_marginLeft="@dimen/extra_margin"
        android:layout_marginTop="@dimen/normal_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/apnlogin_title"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/apnpass_value"
            android:inputType="textPassword"
            android:hint="@string/label_dash_pass"
            android:layout_marginTop="@dimen/normal_padding"
            app:layout_constraintStart_toEndOf="@id/apnlogin_value"
            app:layout_constraintTop_toBottomOf="@id/apnpass_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>